Changed background color

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Comic Sans", Helvetica, Arial;
-  background-color: #157F27;
+  background-color: #242D22;
   color: #ffffff;
 }
 
